# eco-detector

./: .gitignore  GEMINI.md  pyproject.toml
data/raw/: download.py
src/data/: loader.py
